# Excel-to-SBOL

./: .gitignore  Composition_reading.py  Excel.py  LICENSE  README.md  col_to_excel.py  out.html  out.nt  out.xml  out1.html  out_pichia_tyto.html  outing.html  pyproject.toml  requirements.txt  setup.py  temp.py  temp_comb_dev.py  test.xml
.github/ISSUE_TEMPLATE/: documentation-improvement.md  test-request.md
.github/workflows/: linting.yml  python-package.yml  python-publish.yml  superlinter.yml  test.yml  testing.yml  workflow.yml
excel2sbol/: MANIFEST.in  README.md  comp_column_functions2.py  excel2bol_darpa_template_blank_v006_20210405.xlsx  library2.py  lookup_compiler.py  main.py  pichia_toolkit_KWK_v002 copy_Prubhtej.xlsx  setup.py
excel2sbol/converter/: part_library_converter.py  template.py  template_factory.py
excel2sbol/excel2sbol/: column_functions.py  comp_column_functions.py  comp_column_functions2.py  compiler.py  compiler_test.py  converter.py  converter_function copy.py  converter_function.py  helper_functions.py  (+11 more)
excel2sbol/excel2sbol.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
excel2sbolenv/: pyvenv.cfg
images/: Dependency_structure.pptx
notebooks/: Excel2SBOL_Murray_Parts.xlsm  Murray_parts.ipynb  murray_parts_sbol.xml  validations.ipynb
resources/: Excel2SBOLConverter.py
templates/: build-request-template_BsPpVn.xlsx  darpa_template_blank.xlsx
tests/: conftest.py  test_column_functions.py  test_converter_function.py  test_helper_functions.py  test_initialise_functions.py  test_validations.ipynb  test_validator_pytests.py
(+167 files in other folders)
