[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "excel2sbol"
version = "1.1.13"
description = "Excel-to-SBOL is an open source python library that converts Excel Templates to SBOL documents"
readme = "README.md"
requires-python = "==3.7"
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
keywords = ["SBOL", "Excel", "templates", "convert", "synthetic biology"]
authors = [
  { name="Jet Mante", email="jet.mante@colorado.edu" }
]
maintainers = [
  { name = "Carolus Vitalis", email = "carolus.vitalis@colorado.edu" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "openpyxl==3.0.7",
    "numpy==1.26.1",
    "pandas==1.3.3",
    "rdflib==6.1.1",
    "requests==2.25.1",
    "sbol2==1.2",
    "sbol3==1.0.0",
    "tyto==1.2",
    "urllib3==1.26.5",
    "validators==0.18.2"
]

[project.optional-dependencies]
test = [
  "pytest < 5.0.0",
  "pytest-cov[all]"
]

[project.urls]
"Homepage" = "https://github.com/SynBioDex/Excel-to-SBOL"
"Bug Tracker" = "https://github.com/SynBioDex/Excel-to-SBOL/issues"
